# cicerone

./: .coverage  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  HOMEBREW_PUBLISHING.md  Makefile  PUBLISHING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_openapi_directory.py
.github/: compatibility.json
.github/workflows/: ci.yml  test-openapi-directory.yml
CHANGELOG/: index.html
cicerone/: cli.py  settings.py
cicerone/extensions/: __init__.py
cicerone/parse/: __init__.py  parser.py
cicerone/references/: reference.py  reference_resolver.py
cicerone/spec/: __init__.py  callback.py  components.py  encoding.py  example.py  header.py  info.py  link.py  media_type.py  model_utils.py  models.py  oauth_flows.py  openapi_spec.py  operation.py  parameter.py  path_item.py  paths.py  reference_resolver.py  request_body.py  response.py  schema.py  security_scheme.py  server.py  tag.py  version.py  webhooks.py
compatibility/: index.html
docs/: BEFORE_AFTER.md  CHANGELOG.md  CLIENTELE_COMPATIBILITY.md  compatibility.md  examples.md  index.md  install.md  models.md  parser.md  references.md
examples/: index.html
install/: index.html
models/: index.html
parser/: index.html
references/: index.html
search/: search_index.json
tests/: test_extensions.py  test_openapi_examples.py  test_openapi_spec.py  test_performance.py  test_realworld_schemas.py  test_version.py
tests/async_test_class_client/: MANIFEST.md
tests/async_test_client/: MANIFEST.md  config.py
tests/fixtures/: callback_example.yaml  swagger2.yaml
tests/generators/: test_base.py
tests/parse/: test_parser.py
tests/spec/: test_additional_models.py  test_callback.py  test_component_models.py  test_components.py  test_info.py  (+12 more)
(+4 files in other folders)
